# dex-v2-contracts

./: .gitignore  Makefile  README.md  flake.nix  hie.yaml  wingriders-plutarch.cabal
scripts/: ExportDEX.hs  ExportUtils.hs
src/DEX/: Constants.hs  Factory.hs  Pool.hs  Request.hs
src/DEX/Mint/: Validity.hs
src/DEX/Pool/: ConstantProduct.hs  Stableswap.hs  Util.hs
src/DEX/Staking/: RewardMint.hs
src/DEX/Treasury/: Holder.hs
src/DEX/Types/: Base.hs  Classes.hs  Factory.hs  Pool.hs  Request.hs  Treasury.hs
src/Plutarch/: Util.hs
src/Plutarch/Mint/: Util.hs
src/Plutarch/Types/: Base.hs
src/Plutus/: Missing.hs  Util.hs
